--- a/playbooks/oracle_duplicate/rman-pre-duplicate.yml
+++ b/playbooks/oracle_duplicate/rman-pre-duplicate.yml
@@ -8,10 +8,10 @@
   tasks:
       
     - name: Store readonly passwords
-      include_tasks: ../delius_users/playbook.yml
+      include_tasks: "{{ playbook_dir }}/../delius_users/playbook.yml"
       vars: 
         action_type: "store"
-      when: duplicate_target | regex_replace('(^.*)_.*$','\\1') == 'delius'
+      when: duplicate_target | regex_search('.*_delius_primarydb')
 
     - name: Export Automatic Workload Repository (AWR)
       include_tasks: ../awr_export/playbook.yml
@@ -31,7 +31,7 @@
   vars:
       action: "export"
   when: 
-    - duplicate_target | regex_replace('(^.*)_.*$','\\1') == 'mis'
+    - duplicate_target | regex_search('.*_mis_primarydb$')
     - database_primary_sid | regex_search('STGMIS.*$')
 
 - name: Keep delius datasets required
@@ -39,13 +39,13 @@
   vars:
     action: "keep"
   when:
-    - duplicate_target | regex_replace('(^.*)_.*$','\\1') == 'delius'
+    - duplicate_target | regex_search('.*_delius_primarydb')
 
 # Allow jobs during the blackout so the Audited Interaction archival job may run
 - name: Start database monitoring blackout
-  import_playbook: ../oem-blackout/playbook.yml 
+  import_playbook: ../oem_blackout/playbook.yml
   vars:
-     target: "{{ duplicate_target.split('_')[0] + '_dbs' }}"  
+     target: "{{ duplicate_target.split('_primarydb')[0] + '_dbs' }}"
      action: "start" 
      object_type: "all" 
      blackout: "DUPLICATE_{{ environment_name }}" 
@@ -80,37 +80,13 @@
 # (Only required for Delius, to ensure that any auditable activity has been preserved)
 
 - name: Block all database sessions
-  import_playbook: ../block-sessions/playbook.yml 
+  import_playbook: ../block_sessions/playbook.yml
   vars:
     target_host: "{{ duplicate_target }}"  
     action: "block" 
-  when: duplicate_target | regex_replace('(^.*)_.*$','\\1') == 'delius'
+  when: duplicate_target |  regex_search('.*_delius_primarydb')
     
 # Propagate remaining Audited Interaction Data from the database prior to deletion
 # if an audited_interaction_repo has been defined within this environment
 # (May be skipped if source database is corrupt or unavailable although this should not normally be done)
-# - name: Disable Audited Interaction Replication Tasks
-#   hosts: '{{ duplicate_target }}'
-#   gather_facts: no
-#   become: yes
-#   become_user: oracle
-
-#   tasks:
-
-#     - name: Stop Audited Interaction Replication Prior to Duplication
-#       block:
-
-#             - name: Process HCL File to Get Account IDs
-#               include_tasks: ../ansible_controller/read_hcl.yml
-
-#             - name: Setup Ansible Controller
-#               include: ../ansible_controller/prepare_ansible_controller.yml
-#               become: no
-
-#             # This task will do nothing if there are no DMS Migration Tasks
-#             - name: Stop Audited Interaction Replication Prior to Duplication
-#               include_tasks: ../../../../engineering/operations/playbooks/oracle_dms_for_audit/oracle_dms_for_audit/tasks/stop_tasks_ssm_automation.yml
-
-#       when:
-#         - duplicate_target | regex_replace('(^.*)_.*$','\\1') == 'delius'
-#         - not ( skip_audited_interaction_archival | bool )
+# TO BE DEVELOPED
