--- a/.github/workflows/oracle-db-schedule-validate-backups.yml
+++ b/.github/workflows/oracle-db-schedule-validate-backups.yml
@@ -39,8 +39,7 @@ jobs:
         id: report-run
         run: |
               echo "Scheduling Validation for these targets: ${{ needs.prepare-run-matrix.outputs.scheduled_matrix }}"
-              echo "Running ${{ needs.prepare-run-matrix.outputs.scheduled_matrix.TargetEnvironment }} on ${{ needs.prepare-run-matrix.outputs.scheduled_matrix.TargetHost }}"
-
+ 
   report-no-validate-backup:
     needs: prepare-run-matrix
     runs-on: ubuntu-latest
@@ -60,5 +59,5 @@ jobs:
     uses:
       ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-validate-backups.yml@DBA-662
     with:
-      TargetEnvironment: ${{ needs.prepare-run-matrix.outputs.scheduled_matrix.TargetEnvironment }}
-      TargetHost: ${{ needs.prepare-run-matrix.outputs.scheduled_matrix.TargetHost }}
+      TargetEnvironment: ${{ matrix.TargetEnvironment }}
+      TargetHost: ${{ matrix.TargetHost }}
