--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -196,7 +196,7 @@ jobs:
           -e skip_audited_interaction_archival=${{ github.event.inputs.SkipAudit }}
 
   slack-notification:
-    if: ${{ job.oracle-rman-pre-duplicate.outputs.Status == 'failure' ||  job.oracle-rman-pre-duplicate.outputs.Status == 'cancelled' }}
+    if: ${{ needs.oracle-rman-pre-duplicate.outputs.Status == 'failure' || needs.job.oracle-rman-pre-duplicate.outputs.Status == 'cancelled' }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
