--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -77,7 +77,7 @@ jobs:
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
     timeout-minutes: 1440
-    continue-on-error: false
+    continue-on-error: true
     outputs:
       SlackChannel: ${{ steps.preparation.outputs.SlackChannel }}
       Status: ${{ job.status }}
@@ -196,7 +196,7 @@ jobs:
           -e skip_audited_interaction_archival=${{ github.event.inputs.SkipAudit }}
 
   slack-notification:
-    if: ${{ needs.oracle-rman-pre-duplicate.outputs.Status == 'failure' }}
+    if: ${{ contains(needs.*.result, 'failure') }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
