--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -196,11 +196,11 @@ jobs:
           -e skip_audited_interaction_archival=${{ github.event.inputs.SkipAudit }}
 
   slack-notification:
-    if: ${{ contains(needs.*.result, 'failure') }}
+    if: failure() #always() && ${{ contains(needs.*.result, 'failure') }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
-    needs: ['oracle-rman-pre-duplicate']
+    # needs: ['oracle-rman-pre-duplicate']
     steps:
 
       - name: Configure AWS Credentials
