--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -200,7 +200,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
-    # needs: ['oracle-rman-pre-duplicate']
+    needs: ['oracle-rman-pre-duplicate']
+    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
     steps:
 
       - name: Configure AWS Credentials
