--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -199,7 +199,7 @@ jobs:
 
   slack-notification:
     #if: always() && ${{ contains(needs.*.result, 'failure') }}
-    if: ${{ contains(needs.*.result, 'failure') }}
+    if: ${{ contains(needs.*.result, 'success') }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
