--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -28,10 +28,6 @@ on:
           - "misboe_standbydb1"
           - "misdsd_standbydb1"
           - "delius_standbydb2"
-      TargetHostList:
-        description: "INTERNAL USE ONLY"
-        type: string
-        default: "delius_primarydb, mis_primarydb, misboe_primarydb, misdsd_primarydb, delius_standbydb1, mis_standbydb1,misboe_standbydb1,misdsd_standbydb1,delius_standbydb2"
       Period: 
         description: "Is this a daily or weekly backup?"
         required: true
@@ -127,6 +123,13 @@ jobs:
           RmanTarget="environment_name_$(echo $TargetEnvironment | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_$TargetHost"
           echo "RmanTarget=$RmanTarget" >> $GITHUB_OUTPUT
           echo "TargetEnvironment=$TargetEnvironment" >> $GITHUB_OUTPUT
+
+      - name: Check Backup Run Status
+        id: check-backup-run-status
+        run: |
+             STATUS=$(aws ssm get-parameter \
+                       --name "/oracle-backups/${{ steps.preparermantargetname.outputs.TargetEnvironment }}/${{ steps.preparermantargetname.outputs.RmanTarget }}/status")
+             echo "Status: $STATUS"
 
   # Start deployment container job based on the build delius-ansible-aws image
   deployment:
